--- a/index.html
+++ b/index.html
@@ -1,191 +1,106 @@
-
-<!-- header.html -->
-<header>
-  <nav class="navbar">
-    <a href="index.html" class="logo">
-      <img src="tekpak-logo.png" alt="Tek-Pak Logo">
-    </a>
-    <ul class="menu">
-      <li><a href="index.html">HOME</a></li>
-      <li><a href="services.html">SERVICES</a></li>
-      <li><a href="about.html">ABOUT</a></li>
-      <li><a href="contact.html">CONTACT</a></li>
-    </ul>
-  </nav>
-</header>
-
-<style>
-  :root {
-    --lime-light: #b8f6a8; /* much lighter green */
-    --green-soft: #8ed88c; /* soft muted green */
-    --ink: #0e1726;
-    --bg: #ffffff;
-    --grey: #cccccc;
-  }
-
-  body {
-    margin: 0;
-    background: var(--bg);
-    font-family: "Segoe UI", Roboto, sans-serif;
-  }
-
-  header {
-    background: linear-gradient(
-      180deg,
-      #ffffff 0%,
-      #f5f5f5 45%,
-      #eaeaea 100%
-    );
-    border-bottom: 2px solid var(--grey);
-    box-shadow:
-      inset 0 6px 10px rgba(255,255,255,0.9),
-      inset 0 -6px 12px rgba(0,0,0,0.1),
-      0 6px 18px rgba(0,0,0,0.15);
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-  }
-
-  .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.6rem 1.8rem;
-  }
-
-  .logo img {
-    height: 50px;
-    display: block;
-    filter: drop-shadow(0 0 6px rgba(0,0,0,0.25))
-            drop-shadow(0 0 8px var(--lime-light));
-    transition: transform 0.25s ease, filter 0.25s ease;
-  }
-
-  .logo img:hover {
-    transform: scale(1.05);
-    filter: drop-shadow(0 0 8px rgba(0,0,0,0.3))
-            drop-shadow(0 0 16px var(--green-soft));
-  }
-
-  .menu {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    gap: 2rem;
-  }
-
-  .menu a {
-    font-family: "Segoe UI", sans-serif;
-    font-weight: 700;
-    font-size: 0.8rem; /* smaller text */
-    text-transform: uppercase;
-    color: var(--ink);
-    text-decoration: none;
-    letter-spacing: 1.2px;
-
-    /* subtle engraved look */
-    text-shadow:
-      1px 1px 2px rgba(0,0,0,0.15),
-      -1px -1px 1px rgba(255,255,255,0.8);
-    transition: all 0.25s ease;
-  }
-
-  .menu a:hover {
-    color: var(--green-soft);
-    text-shadow:
-      0 0 3px rgba(0,0,0,0.15),
-      -1px -1px 1px rgba(255,255,255,0.8),
-      0 0 8px rgba(184,246,168,0.6);
-    transform: translateY(-1px);
-  }
-</style>
-
-
-
-<!-- footer.html -->
-<footer>
-  <div class="footer-container">
-    <p class="copyright">© 2025 Tek-Pak Inc. • All Rights Reserved</p>
-    <ul class="footer-menu">
-      <li><a href="privacy.html">PRIVACY</a></li>
-      <li><a href="terms.html">TERMS</a></li>
-      <li><a href="contact.html">CONTACT</a></li>
-    </ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Rapid Response • Tek-Pak</title>
+  <style>
+    :root {
+      --lime:#6eea3b;
+      --silver:#d9d9d9;
+      --ink:#0e1726;
+      --bg:#f5f7fa;
+      --glass:#ffffffcc;
+      --radius:20px;
+      --blur:12px;
+    }
+    * { box-sizing:border-box; }
+    body {
+      margin:0;
+      font-family: system-ui, sans-serif;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      min-height:100vh;
+      background: linear-gradient(135deg, var(--silver), var(--bg));
+      overflow:hidden;
+    }
+    body::before {
+      content:"";
+      position:absolute;
+      width:200%;
+      height:200%;
+      background:
+        radial-gradient(circle at 30% 30%, #fff8 0%, transparent 60%),
+        linear-gradient(45deg, #ccc3 25%, transparent 25% 75%, #ccc3 75%);
+      transform:rotate(10deg);
+    }
+    .app {
+      position:relative;
+      background:var(--glass);
+      backdrop-filter:blur(var(--blur));
+      -webkit-backdrop-filter:blur(var(--blur));
+      border-radius:var(--radius);
+      padding:2rem;
+      width:90%;
+      max-width:420px;
+      box-shadow:0 8px 24px #0002;
+      text-align:center;
+    }
+    h1 {
+      font-size:1.8rem;
+      font-style:italic;
+      color:var(--ink);
+      text-shadow:0 0 6px var(--lime);
+      margin-bottom:1rem;
+    }
+    .card {
+      background:var(--glass);
+      border-radius:var(--radius);
+      padding:1rem;
+      margin:1rem 0;
+      box-shadow:0 4px 12px #0001;
+      transition:transform 0.2s ease, box-shadow 0.2s ease;
+    }
+    .card:hover {
+      transform:translateY(-4px);
+      box-shadow:0 8px 24px #0003;
+    }
+    .btn {
+      display:block;
+      margin:1rem auto;
+      padding:0.8rem 1.4rem;
+      border-radius:var(--radius);
+      border:none;
+      background:var(--lime);
+      color:#000;
+      font-weight:bold;
+      font-size:1rem;
+      cursor:pointer;
+      box-shadow:0 0 12px var(--lime);
+      transition:all 0.2s ease;
+    }
+    .btn:hover {
+      background:#8eff60;
+      box-shadow:0 0 20px var(--lime);
+    }
+  </style>
+</head>
+<body>
+  <div class="app">
+    <h1>Find your parts fast &amp; get them fast too!</h1>
+    <div class="card">
+      <p>Browse Tek-Pak’s Rapid Response inventory and locate the part you need in seconds.</p>
+      <button class="btn">Browse Parts</button>
+    </div>
+    <div class="card">
+      <p>Need it delivered right away? Select priority shipping and we’ll get it on the road now.</p>
+      <button class="btn">Request Delivery</button>
+    </div>
+    <div class="card">
+      <p>Already ordered? Track your shipment in real time and stay updated.</p>
+      <button class="btn">Track Order</button>
+    </div>
   </div>
-</footer>
-
-<style>
-  :root {
-    --lime-light: #b8f6a8;
-    --green-soft: #8ed88c;
-    --ink: #0e1726;
-    --bg: #ffffff;
-    --grey: #cccccc;
-  }
-
-  footer {
-    background: linear-gradient(
-      180deg,
-      #fdfdfd 0%,
-      #f2f2f2 60%,
-      #e8e8e8 100%
-    );
-    border-top: 2px solid var(--grey);
-    box-shadow:
-      inset 0 6px 10px rgba(255,255,255,0.9),
-      inset 0 -6px 12px rgba(0,0,0,0.1),
-      0 -6px 18px rgba(0,0,0,0.15);
-    padding: 1rem 2rem;
-    text-align: center;
-  }
-
-  .footer-container {
-    max-width: 1200px;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    gap: 0.8rem;
-    align-items: center;
-  }
-
-  .copyright {
-    margin: 0;
-    font-size: 0.75rem;
-    font-weight: 600;
-    color: var(--ink);
-    text-shadow:
-      1px 1px 2px rgba(0,0,0,0.15),
-      -1px -1px 1px rgba(255,255,255,0.8);
-  }
-
-  .footer-menu {
-    list-style: none;
-    display: flex;
-    gap: 2rem;
-    padding: 0;
-    margin: 0;
-  }
-
-  .footer-menu a {
-    font-size: 0.75rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    color: var(--ink);
-    text-decoration: none;
-    letter-spacing: 1.2px;
-    text-shadow:
-      1px 1px 2px rgba(0,0,0,0.15),
-      -1px -1px 1px rgba(255,255,255,0.8);
-    transition: all 0.25s ease;
-  }
-
-  .footer-menu a:hover {
-    color: var(--green-soft);
-    text-shadow:
-      0 0 3px rgba(0,0,0,0.15),
-      -1px -1px 1px rgba(255,255,255,0.8),
-      0 0 8px rgba(184,246,168,0.6);
-    transform: translateY(-1px);
-  }
-</style>
+</body>
+</html>
