--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
     async function loadInventory() {
       try {
-        const res = await fetch(`YOUR_SCRIPT_URL_HERE`);
+        const res = await fetch(`https://script.google.com/macros/s/AKfycbyabkMqko_NEQ997rXvDrH_6qpdoGbWFVgmNizV33CfEB0rcJWtm_I4INGcUQ-L9l8d/exec`);
         const data = await res.json();
 
         const invDiv = document.getElementById('inventory');
@@ -298,4 +298,5 @@
   </script>
 </body>
 </html>
+
 
