--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
-    /* ================================
-       LIGHT MODE + BRUSHED METAL THEME
-       ================================ */
-
     :root {
       --bg: #e6e7ea; 
       --bg-panel: #f4f5f7;
@@ -47,7 +43,6 @@
       gap: 12px;
     }
 
-    /* ---------- NAV BAR ---------- */
     .nav {
       display: flex;
       justify-content: space-between;
@@ -100,7 +95,6 @@
       margin-right: 5px;
     }
 
-    /* ---------- LAYOUT ---------- */
     .layout {
       display: grid;
       grid-template-columns: 2fr 1fr;
@@ -112,7 +106,6 @@
       .layout{ grid-template-columns: 1fr; }
     }
 
-    /* ---------- PANELS ---------- */
     .panel {
       background: linear-gradient(135deg,#ffffffee,#f0f1f3cc);
       border: 1px solid var(--border);
@@ -139,7 +132,6 @@
       margin-bottom:10px;
     }
 
-    /* ---------- FILTERS ---------- */
     .filters {
       display:grid;
       grid-template-columns:1.4fr 1fr 1fr 1fr;
@@ -173,7 +165,6 @@
       outline:none;
     }
 
-    /* ---------- INVENTORY LIST ---------- */
     .inventory-list {
       flex:1;
       overflow-y:auto;
@@ -223,7 +214,6 @@
     .tag-status-sold { color:var(--danger); border-color:var(--danger); }
     .tag-status-hold { color:#e6a200; border-color:#e6a200; }
 
-    /* ---------- BUTTONS ---------- */
     .btn {
       border-radius:999px;
       padding:6px 12px;
@@ -249,7 +239,6 @@
       filter:brightness(1.05);
     }
 
-    /* ---------- FORM GRID ---------- */
     .form-grid {
       display:grid;
       grid-template-columns:1fr 1fr;
@@ -264,41 +253,33 @@
       margin:10px 0;
       border-top:1px solid var(--border);
     }
-
   </style>
 </head>
 
 <body>
   <div class="shell">
-
-    <!-- ========================== HEADER ========================== -->
     <header class="nav">
       <div class="nav-left">
         <img src="tekpak-logo.png" class="tp-logo" alt="Tek-Pak Logo">
-
         <div class="nav-title">
           <div class="nav-title-main">Tek-Pak Inventory</div>
           <div class="nav-title-sub">Employee Portal · Light Metal Edition</div>
         </div>
       </div>
-
       <div style="display:flex;align-items:center;gap:6px;">
         <div class="status-dot"></div>
         <span id="apiStatus">Connecting…</span>
       </div>
     </header>
 
-    <!-- ========================== MAIN ========================== -->
     <main class="layout">
-
-      <!-- ====================== LEFT: INVENTORY LIST ====================== -->
+      <!-- LEFT SIDE: Inventory -->
       <section class="panel">
         <div class="panel-title">Inventory</div>
         <div class="panel-sub">Browse, search, filter, and edit items.</div>
 
         <button class="btn btn-primary" onclick="reloadData()">Refresh</button>
 
-        <!-- FILTERS -->
         <div class="filters" style="margin-top:10px;">
           <div>
             <div class="field-label">Search</div>
@@ -333,14 +314,13 @@
         <div id="inventoryList" class="inventory-list"></div>
       </section>
 
-      <!-- ====================== RIGHT: ITEM EDITOR ====================== -->
+      <!-- RIGHT SIDE: Item Editor + List Manager -->
       <section class="panel">
         <div class="panel-title">Item Editor</div>
         <div class="panel-sub">Add new items or update existing entries.</div>
 
         <form id="itemForm" onsubmit="onSubmitItem(event)">
           <div class="form-grid">
-
             <div>
               <div class="field-label">TP-SKU (auto if blank)</div>
               <input type="text" id="fTP_SKU">
@@ -445,7 +425,6 @@
               <div class="field-label">Sold</div>
               <input type="text" id="fSold">
             </div>
-
           </div>
 
           <div class="section-divider"></div>
@@ -463,7 +442,6 @@
 
         <div class="section-divider"></div>
 
-        <!-- LIST MANAGER -->
         <div>
           <div class="panel-title">List Manager</div>
           <div class="panel-sub">Update dropdown lists (categories, manufacturers, etc).</div>
@@ -499,15 +477,12 @@
         <div style="margin-top:10px;font-size:12px;color:var(--muted);">
           <span id="statusText">Ready.</span>
         </div>
-
       </section>
     </main>
   </div>
 
-  <!-- ========================== JAVASCRIPT ========================== -->
   <script>
-    // Your live Apps Script URL:
-    const API_BASE = "https://script.google.com/macros/s/AKfycbz3fqpEybK95pNmkJHleLlfdLudK0He1zf0I8Vns3qgX_SDQmnTCteAkb6qTiF-QVI9Yg/exec";
+    const API_BASE = "https://script.google.com/macros/s/AKfycbxXu0cIMbAYqhN_8xKFyKPRAaNlXFUEUX_w6oA8Lh1C2iTYuwydCn5DgQBANwOVpE4-UQ/exec";
 
     let inventory = [];
     let lists = { categories: [], locations: [], status: [], manufacturers: [] };
@@ -784,7 +759,6 @@
         "Notes": val("fNotes")
       };
 
-      // Auto-generate TP-SKU if blank
       if (!fields["TP-SKU"]) {
         const chars = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
         let r = "";
