Fix formatting of API_BASE constant in index.html

--- a/index.html
+++ b/index.html
@@ -482,7 +482,8 @@
   </div>
 
   <script>
-    const API_BASE = "https://script.google.com/macros/s/AKfycbxXu0cIMbAYqhN_8xKFyKPRAaNlXFUEUX_w6oA8Lh1C2iTYuwydCn5DgQBANwOVpE4-UQ/exec";
+    const API_BASE = "https://script.google.com/macros/s/AKfycbxXu0cIMbAYqhN_8xKFyKPRAaNlXFUEUX_w6oA8Lh1C2iTYuwydCn5DgQBANwOVpE4-UQ/exec
+";
 
     let inventory = [];
     let lists = { categories: [], locations: [], status: [], manufacturers: [] };
