--- a/index.html
+++ b/index.html
@@ -482,8 +482,7 @@
   </div>
 
   <script>
-    const API_BASE = "https://script.google.com/macros/s/AKfycbxXu0cIMbAYqhN_8xKFyKPRAaNlXFUEUX_w6oA8Lh1C2iTYuwydCn5DgQBANwOVpE4-UQ/exec
-";
+    const API_BASE = "https://script.google.com/macros/s/AKfycbxXu0cIMbAYqhN_8xKFyKPRAaNlXFUEUX_w6oA8Lh1C2iTYuwydCn5DgQBANwOVpE4-UQ/exec";
 
     let inventory = [];
     let lists = { categories: [], locations: [], status: [], manufacturers: [] };
